k8s/manifests/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xray-server
  namespace: spotify-xray
spec:
  replicas: 1
  selector:           
    matchLabels:      
      app: spotify-xray 
  template:
    metadata:
      labels:
        app: spotify-xray
    spec:
      containers:
      - name: spotify-xray
        image: 271122/spotify-xray
      - name: redis
        image: redis:8.2-rc1-alpine3.22
