k8s/manifests/02-service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  xray-service
  namespace: spotify-xray
spec:
  selector:
    app: spotify-xray
  type: ClusterIP
  ports:
  - name:  web
    port:  80
    targetPort:  80
