k8s/manifests/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xray-ingress
  namespace: spotify-xray
spec:
  ingressClassName: nginx
  rules:
  - host: spotify-xray.alvn.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: xray-service
            port:
              number: 80
